--- a/cod.html
+++ b/cod.html
@@ -15,6 +15,8 @@
 		<input type='radio' name='codif' value='3'><br/>
 		Cifrado simétrico:
 		<input type='radio' name='codif' value='4'><br/>
+		Descifrado simétrico:
+		<input type='radio' name='codif' value='5'><br/>
 		<input type='submit'/>
 	</body>
 </html>
